force-app/main/default/objects/Internship_Learning_Log__c/Internship_Learning_Log__c.object-meta.xml
<CustomObject>
    <label>Internship Learning Log</label>
    <nameField>
        <label>Intern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internship Learning Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>