force-app/main/default/objects/Internship_Learning_Log__c/fields/Challenge_Faced__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Faced__c</fullName>
    <label>Challenge Faced</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>