force-app/main/default/objects/Internship_Learning_Log__c/fields/Faculty_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Remarks__c</fullName>
    <label>Faculty Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>