force-app/main/default/objects/Internship_Learning_Log__c/fields/Internship_Application__c.field-meta.xml
<CustomField>
    <fullName>Internship_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internship Application</label>
    <referenceTo>Student_Application__c</referenceTo>
    <relationshipName>Internship_Monitorings</relationshipName>
    <type>Lookup</type>
</CustomField>