force-app/main/default/objects/Internship_Learning_Log__c/fields/New_Skill_Learned__c.field-meta.xml
<CustomField>
    <fullName>New_Skill_Learned__c</fullName>
    <label>New Skill Learned</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>