force-app/main/default/objects/Internship_Learning_Log__c/fields/Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Week_Number__c</fullName>
    <label>Week Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>